dataset1235/2025-2/805158916/users/3920620008/executions/1584167357_3198308593.log
== RUN (2025-08-27 14:13:23)
-- CODE: 
raio = float(input())
volume = 4 / 3 * pi * raio * 3  
print(round(volume, 4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    volume = 4 / 3 * pi * raio * 3  
                     ^^
NameError: name 'pi' is not defined
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    volume = 4 / 3 * pi * raio * 3  
                     ^^
NameError: name 'pi' is not defined
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    volume = 4 / 3 * pi * raio * 3  
                     ^^
NameError: name 'pi' is not defined
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    volume = 4 / 3 * pi * raio * 3  
                     ^^
NameError: name 'pi' is not defined
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    volume = 4 / 3 * pi * raio * 3  
                     ^^
NameError: name 'pi' is not defined
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    volume = 4 / 3 * pi * raio * 3  
                     ^^
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:13:45)
-- CODE: 
raio = float(input())
volume = 4/3 * pi * raio * 3  
print(round(volume, 4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    volume = 4/3 * pi * raio * 3  
                   ^^
NameError: name 'pi' is not defined
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    volume = 4/3 * pi * raio * 3  
                   ^^
NameError: name 'pi' is not defined
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    volume = 4/3 * pi * raio * 3  
                   ^^
NameError: name 'pi' is not defined
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    volume = 4/3 * pi * raio * 3  
                   ^^
NameError: name 'pi' is not defined
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    volume = 4/3 * pi * raio * 3  
                   ^^
NameError: name 'pi' is not defined
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    volume = 4/3 * pi * raio * 3  
                   ^^
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:52:44)
-- CODE: 
from  math import pi
raio = float(input())
volume =  4/3* pi * (raio ** 3)
print(round(volume, 4))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
---- user output:
696.91
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
---- user output:
4.1888
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
---- user output:
137.2583
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
---- user output:
4188.7902
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
---- user output:
7238.2295
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
---- user output:
0.5236
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:45:50)
-- CODE: 
from  math import pi
raio = float(input())
volume = 4/3 *raio ** 3
print(round(volume, 4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
---- user output:
221.8333
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
---- user output:
1.3333
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
---- user output:
43.6907
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
---- user output:
1333.3333
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
---- user output:
2304.0
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
---- user output:
0.1667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:45:47)
-- CODE: 
from  math import pi
raio = float(input())
volume = 4/3 *raio ** 3
print(round(volume, 4))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
---- user output:
221.8333
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
---- user output:
1.3333
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
---- user output:
43.6907
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
---- user output:
1333.3333
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
---- user output:
2304.0
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
---- user output:
0.1667
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:12:59)
-- CODE: 
raio = float(input() 
volume = 4 / 3 * pi * raio * 3  
print(round(volume,4)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
-- ERROR:
File "XXXX", line 1
    raio = float(input() 
                 ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
-- ERROR:
File "XXXX", line 1
    raio = float(input() 
                 ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
-- ERROR:
File "XXXX", line 1
    raio = float(input() 
                 ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
-- ERROR:
File "XXXX", line 1
    raio = float(input() 
                 ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
-- ERROR:
File "XXXX", line 1
    raio = float(input() 
                 ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
-- ERROR:
File "XXXX", line 1
    raio = float(input() 
                 ^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:53:21)
-- CODE: 
from  math import pi
raio = float(input())
volume =  4/3* pi * (raio ** 3)
print(round(volume, 4))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
---- user output:
696.91
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
---- user output:
4.1888
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
---- user output:
137.2583
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
---- user output:
4188.7902
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
---- user output:
7238.2295
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
---- user output:
0.5236
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:52:48)
-- CODE: 
from  math import pi
raio = float(input())
volume =  4/3* pi * (raio ** 3)
print(round(volume, 4))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
---- user output:
696.91
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
---- user output:
4.1888
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
---- user output:
137.2583
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
---- user output:
4188.7902
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
---- user output:
7238.2295
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
---- user output:
0.5236
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:45:05)
-- CODE: 
from  math import pi
raio = float(input())
volume = 4/3 *raio * 2
print(round(volume, 4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.5
---- correct output:
696.91
---- user output:
14.6667
-- TEST CASE 2:
---- input:
1.0
---- correct output:
4.1888
---- user output:
2.6667
-- TEST CASE 3:
---- input:
3.2
---- correct output:
137.2583
---- user output:
8.5333
-- TEST CASE 4:
---- input:
10.0
---- correct output:
4188.7902
---- user output:
26.6667
-- TEST CASE 5:
---- input:
12.0
---- correct output:
7238.2295
---- user output:
32.0
-- TEST CASE 6:
---- input:
0.5
---- correct output:
0.5236
---- user output:
1.3333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
